--- a/style.css
+++ b/style.css
@@ -674,6 +674,12 @@ form > div > input {
   #last {
     display: none;
   }
+  .sec8 > div > div {
+    width: 80vw;
+    text-align: left;
+    margin-left: 0;
+    text-overflow: clip;
+  }
 }
 
 @media only screen and (max-width: 500px) {
